display label of 'Texted Location' for texted locations

--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -67,8 +67,8 @@
           {% endif %}
           {% if form.data__location.value %}
           <tr>
-            <th>{{ form.data__location }}</th>
-            <td><strong><em>{{ form.data__location.value }}</em></strong></td>
+            <th>Texted Location</th>
+            <td><strong><em>{{ form.data__location.value }}</em></strong>{{ form.data__location }}</td>
           </tr>
           {% endif %}
           {% endif %}
