--- a/src/apollo/core/templates/core/submission_edit.html
+++ b/src/apollo/core/templates/core/submission_edit.html
@@ -140,14 +140,14 @@
           {% for field in fieldset %}
           <tr{% if field.label in object.overrides %} class="warning"{% endif %}>
             <td style="text-align: center">{{ field.label }}</td>
-            <td width="100%">{{ field.help_text }}
+            <td width="100%"><label for="{{ field.auto_id }}">{{ field.help_text }}
               {% if field.field.choices %}
               <span class="options">
                 {% for choice in field.field.choices %}
                 <span class="option"><strong>({{ choice.0 }})</strong> {{ choice.1 }}</span>
                 {% endfor %}
               </span>
-              {% endif %}
+              {% endif %}</label>
             </td>
             <td style="text-align:center">{{ field }}</td>
           </tr>
