--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -2,17 +2,19 @@
 {% load apollo %}
 {% block content %}
 <div class="row">
-	<div class="span8">
+	<div class="span5">
 		{% analysis_breadcrumb_navigation form location %}
-		{% analysis_location_navigation form location %}
   	</div>
-  	<div class="span4">
+  	<div class="span7">
         <form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
           {% csrf_token %}
-          {{ filter_form.sample }}
-          <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> Filter</button>
+          {{ filter_form.status }} {{ filter_form.witness }} {{ filter_form.sample }}
+          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> Filter</button>
         </form>
   	</div>
+    <div class="span12">
+        {% analysis_location_navigation form location %}
+    </div>
  </div>
  <div class="row">
 	<div class="span12">
