--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -2,16 +2,18 @@
 {% load apollo %}
 {% block content %}
 <div class="row">
-  <div class="span8">
+  <div class="span9">
       {% analysis_breadcrumb_navigation form location %}
-      {% analysis_location_navigation form location %}
   </div>
-  <div class="span4">
+  <div class="span3">
         <form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
           {% csrf_token %}
           {{ filter_form.sample }}
-          <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> Filter</button>
+          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> Filter</button>
         </form>
+  </div>
+  <div class="span12">
+    {% analysis_location_navigation form location %}
   </div>
 </div>
 <div class="row">
