modified error 404 message

--- a/src/apollo/zimbabwe/templates/404.html
+++ b/src/apollo/zimbabwe/templates/404.html
@@ -20,7 +20,7 @@
     <div class="row-fluid">
 		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
 			<legend style="border-bottom:0px; margin-bottom:0px;">Oh No! Looks like you're lost!</legend>
-			<p>Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you click the back arrow (&larr;) at the top left corner of the page, and cross check the action you were trying to perform!</p>
+			<p>Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you either verify the address or click the back arrow (&larr;) at the top left corner of the page, and cross-check the action you were trying to perform!</p>
 		</div>
 	</div>
   </body>
