--- a/src/apollo/zimbabwe/templates/404.html
+++ b/src/apollo/zimbabwe/templates/404.html
@@ -13,7 +13,7 @@
     <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <div class="container">
-            <a class="brand" href="#"><img src="{{ STATIC_URL }}img/logo.png">&nbsp ZESN &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
+            <a class="brand" href="{% url dashboard %}"><img src="{{ STATIC_URL }}img/logo.png">&nbsp ZESN &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
           </div>
         </div>
       </div>
