--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -56,7 +56,7 @@
                 <div class="btn-group">
                   <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-user icon-white"></i> {{ request.user.username }} <span class="caret"></span></a>
                   <ul class="dropdown-menu pull-right">
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="{% url user-logout %}">Logout</a></li>
                   </ul>
                 </div>
               </li>
