--- a/src/apollo/zimbabwe/templates/500.html
+++ b/src/apollo/zimbabwe/templates/500.html
@@ -5,15 +5,15 @@
     <title>Server Error</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content=""><link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ STATIC_URL }}ico/favicon.ico">
+    <meta name="author" content=""><link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/assets/ico/favicon.ico">
   </head>
  <body>
     <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <div class="container">
-            <a class="brand" href="{% url dashboard %}"><img src="{{ STATIC_URL }}img/logo.png">&nbsp ZESN &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
+            <a class="brand" href="{% url dashboard %}"><img src="/assets/img/logo.png">&nbsp ZESN &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
           </div>
         </div>
       </div>
