--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="span12">
     <div class="well" style="padding-bottom:0">
-      <form action="" method="post" id="filter">
+      <form action="{% url contacts_list %}" method="post" id="filter">
         {% csrf_token %}
         <div class="controls controls-row">
           {{ filter_form.observer_id }}
