--- a/src/apollo/core/templates/core/critical_incidents_locations.html
+++ b/src/apollo/core/templates/core/critical_incidents_locations.html
@@ -9,6 +9,19 @@
 {% endif %}
 {% endblock %}
 {% block content %}
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
+  <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
+  <script type="text/javascript">
+      $(document).ready(function(){
+      });
+      var initialized = false;
+      function init() {
+        if (!initialized) {
+            initialize();
+        }
+        initialize = true;
+      }
+  </script>
 <div class="row">
 	<div class="span5">
 		{% analysis_breadcrumb_navigation form location %}
@@ -30,7 +43,7 @@
 		<div class="tabbable"> <!-- Only required for left/right tabs -->
 			<ul class="nav nav-tabs">
 				<li class="active"><a href="#tab1" data-toggle="tab">Table</a></li>
-				<li><a href="#tab2" data-toggle="tab">Map</a></li>
+				<li><a href="#tab2" data-toggle="tab" onclick="init();">Map</a></li>
 			</ul>
 			<div class="tab-content">
 			    <div class="tab-pane active" id="tab1">
@@ -78,8 +91,38 @@
     {% endfor %}
 </table>
 				</div>
-				<!--Chart-->
+				<!--Map-->
 				<div class="tab-pane" id="tab2">
+                    <div id="map_canvas" style="width:100%; height:700px;"></div>
+                    <script type="text/javascript">
+                    function initialize() {
+                      var mapOptions = {
+                        center: new google.maps.LatLng(-19, 29),
+                        zoom: 7,
+                        mapTypeId: google.maps.MapTypeId.ROADMAP
+                      };
+
+                      var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+                      var levelOne = new google.maps.KmlLayer('http://geocommons.com/overlays/798.kml', {suppressInfoWindows: true, preserveViewport: true});
+                      levelOne.setMap(map);
+                      
+                      var markers = [];
+
+                      for (i = 0; i < 100; i++) {
+                        markers.push(new google.maps.Marker({
+                          position: new google.maps.LatLng(-17.49, 31.3),
+                          title: "Harare"
+                        }));
+                      }
+
+                      cluster = new MarkerClusterer(map, markers);
+
+                      /*var infowindow = new google.maps.InfoWindow({
+                            content:"Gweru"
+                        });
+                        infowindow.open(map,marker);*/
+                    }
+                    </script>
 				</div>
 			</div>
 		</div>
