--- a/src/apollo/core/templates/core/critical_incidents_locations.html
+++ b/src/apollo/core/templates/core/critical_incidents_locations.html
@@ -12,10 +12,8 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
   <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
   <script type="text/javascript">
-      $(document).ready(function(){
-      });
       var initialized = false;
-      function init() {
+      function init_map() {
         if (!initialized) {
             initialize();
         }
@@ -42,11 +40,11 @@
 		{% if incidents %}
 		<div class="tabbable"> <!-- Only required for left/right tabs -->
 			<ul class="nav nav-tabs">
-				<li class="active"><a href="#tab1" data-toggle="tab">Table</a></li>
-				<li><a href="#tab2" data-toggle="tab" onclick="init();">Map</a></li>
+				<li class="active"><a href="#table" data-toggle="tab">Table</a></li>
+				<li><a href="#map" data-toggle="tab" onclick="init_map();">Map</a></li>
 			</ul>
 			<div class="tab-content">
-			    <div class="tab-pane active" id="tab1">
+			    <div class="tab-pane active" id="table">
 <table class="table table-bordered table-striped">
     <tr>
         <td colspan="5"><strong>{{ form_field.tag }}</strong> · {{ form_field.description }}</td>
@@ -92,57 +90,44 @@
 </table>
 				</div>
 				<!--Map-->
-				<div class="tab-pane" id="tab2">
-                    <p>
-                        Province <input type="checkbox" id="layer0" onclick="toggleLevels(0)" checked>
-                        District <input type="checkbox" id="layer1" onclick="toggleLevels(1)" checked>
-                    </p>
-                    <div id="map_canvas" style="width:100%; height:450px;"></div>
-                    <script type="text/javascript">
-                        var map; 
-                        var levels = [];
+				<div class="tab-pane" id="map">
+					<div id="map_canvas" style="width:100%; height:450px;"></div>
+					<script type="text/javascript">
+						var map; 
 
-                        function initialize() {
-                          var zim = new google.maps.LatLng (-19, 27);
-                          var myOptions = {
-                            zoom: 6,
-                            center: zim,
-                            mapTypeId: google.maps.MapTypeId.ROADMAP
-                              }
-                            map = new google.maps.Map(document.getElementById("map_canvas"),
-                              myOptions);
-                            marker = new google.maps.Marker({map:map});
+						function initialize() {
+							var center = new google.maps.LatLng (-19, 29);
+							var myOptions = {
+								zoom: 6,
+								center: center,
+								mapTypeId: google.maps.MapTypeId.ROADMAP,
+								panControl: true,
+								zoomControl: true,
+								zoomControlOptions: {
+    								style: google.maps.ZoomControlStyle.SMALL
+  								},
+								mapTypeControl: true,
+								mapTypeControlOptions: {
+									style: google.maps.MapTypeControlStyle.DROPDOWN_MENU
+								},
+								streetViewControl: false,
+								overviewMapControl: true
+							}
+							map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
-                            levels[0] = new google.maps.KmlLayer('http://geocommons.com/overlays/798.kml', {preserveViewport: true});
-                            levels[1] = new google.maps.KmlLayer('http://geocommons.com/overlays/156552.kml', {preserveViewport: true});
-                            for (var i = 0; i < levels.length; i++) {
-                              levels[i].setMap(map);
-                            }
-                            var markers = [];
+							provinces = new google.maps.KmlLayer('https://dl.dropbox.com/u/7849018/provinces.kml', {preserveViewport: true});
+							provinces.setMap(map);
 
-                            for (i = 0; i < 100; i++) {
-                              markers.push(new google.maps.Marker({
-                                position: new google.maps.LatLng(-17.49, 31.3),
-                                title: "Harare"
-                              }));
-                            }
+							var markers = [];
 
-                            cluster = new MarkerClusterer(map, markers);
-                        }
-                    
-                      /*var infowindow = new google.maps.InfoWindow({
-                            content:"Gweru"
-                        });
-                        infowindow.open(map,marker);*/
-                        function toggleLevels(i) {
-                          if(levels[i].getMap() === null) {
-                            levels[i].setMap(map);
-                          }
-                          else {
-                            levels[i].setMap(null);
-                          }
-                        }
-                    </script>
+							{% for marker in incidents_markers %}
+							markers.push(new google.maps.Marker({
+								position: new google.maps.LatLng({{ marker.0 }}, {{ marker.1 }})
+							}));{% endfor %}
+
+							cluster = new MarkerClusterer(map, markers);
+						}
+					</script>
 				</div>
 			</div>
 		</div>
