--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -4,10 +4,8 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
   <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
   <script type="text/javascript">
-	  $(document).ready(function(){
-	  });
 	  var initialized = false;
-	  function init() {
+	  function init_map() {
 	  	if (!initialized) {
 	  		initialize();
 	  	}
@@ -34,12 +32,12 @@
 		{% if incidents_summary.top %}
 		<div class="tabbable"> <!-- Only required for left/right tabs -->
 			<ul class="nav nav-tabs">
-				<li class="active"><a href="#tab1" data-toggle="tab">Table</a></li>
-				<li><a href="#tab2" data-toggle="tab">Charts</a></li>
-				<li><a href="#tab3" data-toggle="tab" onclick="init();">Map</a></li>
+				<li class="active"><a href="#table" data-toggle="tab">Table</a></li>
+				<li><a href="#charts" data-toggle="tab">Charts</a></li>
+				<li><a href="#map" data-toggle="tab" onclick="init_map();">Map</a></li>
 			</ul>
 			<div class="tab-content">
-			    <div class="tab-pane active" id="tab1">
+			    <div class="tab-pane active" id="table">
 					<table class="table table-bordered table-striped">
 						<tr>
 							<th width="250">Location</th>
@@ -83,28 +81,14 @@
 					</table>
 				</div>
 				<!--Chart-->
-				<div class="tab-pane" id="tab2">
+				<div class="tab-pane" id="charts">
 					<script type="text/javascript+protovis">
 						var data = [[{% for tag, tag_description, tag_stats in incidents_summary.top %}{{ tag_stats.percent_reported }},{% endfor %}]];
 						var labels = ["{{ location }}"];
 						var legend = [{% for tag, tag_description, tag_stats in incidents_summary.top %}"{{ tag|safe }}",{% endfor %}];
-
-						{% for location_type, group_location_stats in incidents_summary.groups %}
-						{% for location, location_data in group_location_stats %}
+						{% for location_type, group_location_stats in incidents_summary.groups %}{% for location, location_data in group_location_stats %}
 						labels.push("{{ location }}");
-						data.push([
-						{% for tag, tag_description, tag_stats in incidents_summary.top %}
-							{% if location_data %}
-							{% with location_data|keyvalue:tag as field_stats %}
-								{{ field_stats.1.percent_reported }},
-						    {% endwith %}
-						    {% else %}
-						    	0,
-						    {% endif %}
-						{% endfor %}
-						]);
-						{% endfor %}
-						{% endfor %}
+						data.push([{% for tag, tag_description, tag_stats in incidents_summary.top %}{% if location_data %}{% with location_data|keyvalue:tag as field_stats %}{{ field_stats.1.percent_reported }},{% endwith %}{% else %}0,{% endif %}{% endfor %}]);{% endfor %}{% endfor %}
 
 						var colors = ['#1f77b4', '#62a1ef', '#aec7e8', '#ff7f0e', '#ffbb78', '#2ca02c', '#98df8a', '#d62728', '#f04a54', '#ff9896', '#7d50ea', '#9467bd', '#c5b0d5', '#8c564b', '#c49c94', '#e377c2', '#f7b6d2', '#7f7f7f', '#c7c7c7', '#bcbd22', '#dbdb8d', '#17becf','#44f2fe', '#9edae5', '#ff0000','#fff000'];
 
@@ -152,56 +136,43 @@
 					</script>
 				</div>
 				<!--Map-->
-				<div class="tab-pane" id="tab3">
-					<p>
-						Province <input type="checkbox" id="layer0" onclick="toggleLevels(0)" checked>
-						District <input type="checkbox" id="layer1" onclick="toggleLevels(1)" checked>
-					</p>
+				<div class="tab-pane" id="map">
 				  <div id="map_canvas" style="width:100%; height:450px;"></div>
-				    <script type="text/javascript">
-				    	var map; 
-				    	var levels = [];
+					<script type="text/javascript">
+						var map; 
 
-				  		function initialize() {
-					      var zim = new google.maps.LatLng (-19, 27);
-					      var myOptions = {
-					        zoom: 6,
-					        center: zim,
-					        mapTypeId: google.maps.MapTypeId.ROADMAP
-					          }
-					        map = new google.maps.Map(document.getElementById("map_canvas"),
-					          myOptions);
-					        marker = new google.maps.Marker({map:map});
+						function initialize() {
+							var center = new google.maps.LatLng (-19, 29);
+							var myOptions = {
+								zoom: 6,
+								center: center,
+								mapTypeId: google.maps.MapTypeId.ROADMAP,
+								panControl: true,
+								zoomControl: true,
+								zoomControlOptions: {
+    								style: google.maps.ZoomControlStyle.SMALL
+  								},
+								mapTypeControl: true,
+								mapTypeControlOptions: {
+									style: google.maps.MapTypeControlStyle.DROPDOWN_MENU
+								},
+								streetViewControl: false,
+								overviewMapControl: true
+							}
+							map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
 
-					        levels[0] = new google.maps.KmlLayer('http://geocommons.com/overlays/798.kml', {preserveViewport: true});
-					      	levels[1] = new google.maps.KmlLayer('http://geocommons.com/overlays/156552.kml', {preserveViewport: true});
-					        for (var i = 0; i < levels.length; i++) {
-					          levels[i].setMap(map);
-					        }
-					        var markers = [];
+							provinces = new google.maps.KmlLayer('https://dl.dropbox.com/u/7849018/provinces.kml', {preserveViewport: true});
+							provinces.setMap(map);
 
-					        for (i = 0; i < 100; i++) {
-					          markers.push(new google.maps.Marker({
-					            position: new google.maps.LatLng(-17.49, 31.3),
-					            title: "Harare"
-					          }));
-					        }
+							var markers = [];
 
-					        cluster = new MarkerClusterer(map, markers);
-					    }
-				    
-					  /*var infowindow = new google.maps.InfoWindow({
-  							content:"Gweru"
-  						});
-						infowindow.open(map,marker);*/
-						function toggleLevels(i) {
-			      		  if(levels[i].getMap() === null) {
-					        levels[i].setMap(map);
-					      }
-					      else {
-					        levels[i].setMap(null);
-					      }
-				     	}
+							{% for marker in incidents_markers %}
+							markers.push(new google.maps.Marker({
+								position: new google.maps.LatLng({{ marker.0 }}, {{ marker.1 }})
+							}));{% endfor %}
+
+							cluster = new MarkerClusterer(map, markers);
+						}
 					</script>
 				</div>
 				</div>
