--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -1,8 +1,10 @@
 {% extends "core/layout.html" %}
 {% load apollo %}
+{% block javascripts %}
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/markerclusterer.js"></script>
+{% endblock %}
 {% block content %}
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk3QNCVPzkE75lgmHt_iOM4v0x2ZU-swI&sensor=false"></script>
-  <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer.js"></script>
   <script type="text/javascript">
 	  var initialized = false;
 	  function init_map() {
