--- a/src/apollo/core/templates/core/critical_incidents_locations.html
+++ b/src/apollo/core/templates/core/critical_incidents_locations.html
@@ -93,7 +93,7 @@
 				</div>
 				<!--Map-->
 				<div class="tab-pane" id="map">
-					<div id="map_canvas" style="width:100%; height:450px;"></div>
+					<div id="map_canvas" style="width:100%; height:450px; margin-bottom:20px;"></div>
 					<script type="text/javascript">
 						var map; 
 
