caching analysis screens

--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -6,8 +6,7 @@
 		{% analysis_breadcrumb_navigation form location display_tag %}
 	</div>
 	<div class="span3">
-		<form class="form-horizontal pull-right" action="" method="post" accept-charset="utf-8">
-          {% csrf_token %}
+		<form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
           {{ filter_form.sample }}
           <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> Filter</button>
         </form>
