--- a/src/apollo/core/templates/core/contact_edit.html
+++ b/src/apollo/core/templates/core/contact_edit.html
@@ -5,17 +5,17 @@
   {% csrf_token %}
   <div class="row">
     <div class="span8 offset2">
-      <table class="table table-hover table-striped table-bordered table-condensed">
+      <table class="table table-striped table-bordered table-hover">
         <tbody>
         {% for field in form %}
           <tr>
-            <td><label for="{{ field.name }}">{{ field.label }}</label></td>
+            <th>{{ field.label }}</th>
             <td>{{ field }}</td>
           </tr>
         {% endfor %}
           <tr>
             <td>&nbsp;</td>
-            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn" style="margin-left:0.5em" href="javascript:history.go(-1);">Cancel</a></td>
+            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn" style="margin-left:0.5em" href="{% url contacts_list %}">Cancel</a></td>
           </tr>
         </tbody>
       </table>
